fixed scrollbar on firefox

--- a/src/app/components/construction-box/construction-box.component.scss
+++ b/src/app/components/construction-box/construction-box.component.scss
@@ -46,6 +46,7 @@ $search-height: 3.5rem;
 		height: calc(100vh - #{$toolbar-height} - #{$search-height});
 		overflow: auto;
 		margin: auto;
+		overflow-x: hidden;
 
 		@include scrollbar(5px)
 	}
